--- a/package.json
+++ b/package.json
@@ -4,35 +4,60 @@
     "description": "",
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "rollup -c",
         "build-watch": "rollup -c -w",
         "start-dev-example": "cd dev-example && npm run start",
         "i-all": "npm i && cd dev-example && npm i",
-        "dev": "npm-run-all --parallel build-watch start-dev-example"
+        "dev": "npm-run-all --parallel build-watch start-dev-example",
+        "lint": "eslint . --ext .tsx"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^21.0.1",
         "@rollup/plugin-node-resolve": "^13.1.3",
         "@rollup/plugin-typescript": "^8.3.0",
+        "@types/lodash": "^4.14.178",
+        "@types/node": "^17.0.14",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
         "@types/styled-components": "^5.1.21",
+        "@typescript-eslint/eslint-plugin": "^5.10.2",
+        "@typescript-eslint/parser": "^5.10.2",
+        "lodash": "^4.17.21",
         "npm-run-all": "^4.1.5",
         "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "rollup": "^2.67.0",
+        "rollup-plugin-banner2": "^1.2.2",
         "rollup-plugin-delete": "^2.0.0",
         "rollup-plugin-dts": "^4.1.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-url": "^3.0.1",
+        "styled-components": "^5.3.3",
         "typescript": "^4.5.5"
     },
     "peerDependencies": {
+        "lodash": "^4.17.21",
         "react": "^17.0.2",
-        "styled-components": "^4.4.0"
+        "react-dom": "^17.0.2",
+        "styled-components": "^5.3.3"
     }
 }
