--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-dos-terminal",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "description": "",
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
@@ -11,7 +11,7 @@
         "build-watch": "rollup -c -w",
         "start-dev-example": "cd dev-example && npm run start",
         "i-all": "npm i && cd dev-example && npm i",
-        "dev": "npm-run-all --parallel build-watch start-dev-example",
+        "dev": "npm-run-all --parallel build-watch start-dev-example ",
         "lint": "eslint . --ext .tsx"
     },
     "keywords": [],
@@ -31,6 +31,7 @@
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^13.1.3",
         "@rollup/plugin-typescript": "^8.3.0",
         "@types/lodash": "^4.14.178",
@@ -40,17 +41,16 @@
         "@types/styled-components": "^5.1.21",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
         "@typescript-eslint/parser": "^5.10.2",
-        "lodash": "^4.17.21",
         "npm-run-all": "^4.1.5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
         "rollup": "^2.67.0",
         "rollup-plugin-banner2": "^1.2.2",
+        "rollup-plugin-copy": "^3.4.0",
         "rollup-plugin-delete": "^2.0.0",
         "rollup-plugin-dts": "^4.1.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-url": "^3.0.1",
+        "rollup-plugin-version-injector": "^1.3.3",
         "styled-components": "^5.3.3",
         "typescript": "^4.5.5"
     },
