--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
     "name": "react-dos-terminal",
     "version": "0.1.0",
     "description": "",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/tpabarbosa/react-dos-terminal"
+    },
+    "files": [
+        "/dist"
+    ],
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
     "types": "dist/index.d.ts",
@@ -11,8 +18,7 @@
         "build-watch": "rollup -c -w",
         "start-dev-example": "cd dev-example && npm run start",
         "i-all": "npm i && cd dev-example && npm i",
-        "dev": "npm-run-all --parallel build-watch start-dev-example ",
-        "lint": "eslint . --ext .tsx"
+        "dev": "npm-run-all --parallel build-watch start-dev-example "
     },
     "keywords": [],
     "author": "",
@@ -39,9 +45,19 @@
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
         "@types/styled-components": "^5.1.21",
-        "@typescript-eslint/eslint-plugin": "^5.10.2",
-        "@typescript-eslint/parser": "^5.10.2",
+        "@typescript-eslint/eslint-plugin": "^5.11.0",
+        "@typescript-eslint/parser": "^5.11.0",
+        "eslint": "^8.8.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-import-resolver-typescript": "^2.5.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "npm-run-all": "^4.1.5",
+        "prettier": "2.5.1",
         "rollup": "^2.67.0",
         "rollup-plugin-banner2": "^1.2.2",
         "rollup-plugin-copy": "^3.4.0",
