--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "build-watch": "rollup -c -w",
         "start-dev-example": "cd dev-example && npm run start",
         "i-all": "npm i && cd dev-example && npm i",
-        "dev": "npm-run-all --parallel build-watch start-dev-example "
+        "dev": "cross-env NODE_ENV=dev npm-run-all --parallel build-watch start-dev-example "
     },
     "keywords": [],
     "author": "",
@@ -47,6 +47,7 @@
         "@types/styled-components": "^5.1.21",
         "@typescript-eslint/eslint-plugin": "^5.11.0",
         "@typescript-eslint/parser": "^5.11.0",
+        "cross-env": "^7.0.3",
         "eslint": "^8.8.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.3.0",
