refact + feat + fix:
- add prompt command
- add systemPaths config options
- fix files totalsize
- separate devCommands from commandsList
- change useOutputHandler API
- fix oldEffect style

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "react-dos-terminal",
     "version": "0.1.4",
-    "description": "",
+    "description": "A collection of React Components to simulate a DOS command line interface.",
     "repository": {
         "type": "git",
         "url": "https://github.com/tpabarbosa/react-dos-terminal"
