--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "styled-components": "^5.3.3"
     },
     "dependencies": {
+        "buffer": "^6.0.3",
         "dompurify": "^2.3.5"
     }
 }
