--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "react-dos-terminal",
-    "version": "0.1.6",
-    "description": "A collection of React Components to simulate a DOS command line interface.",
+    "version": "0.2.0",
+    "description": "A collection of React Components to mock a DOS command line interface.",
     "repository": {
         "type": "git",
         "url": "https://github.com/tpabarbosa/react-dos-terminal"
